Making some changes

--- a/app/src/main/res/menu/editor.xml
+++ b/app/src/main/res/menu/editor.xml
@@ -3,6 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:title="@string/action_rotate_right"
+        android:id="@+id/action_rotate_right"
+        app:showAsAction="ifRoom"
+        android:icon="@drawable/ic_action_rotate_right"/>
+
+    <item
         android:title="@string/action_preview"
         android:id="@+id/action_preview"
         app:showAsAction="ifRoom"
