--- a/app/src/main/res/layout/fragment_enter_page.xml
+++ b/app/src/main/res/layout/fragment_enter_page.xml
@@ -1,33 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/lightPrimaryColor">
+    android:background="@color/colorPrimary"
+    tools:ignore="MissingPrefix">
 
-    <Button
-        android:id="@+id/btn_choose_photo"
-        android:layout_width="160dp"
-        android:layout_height="56dp"
-        android:layout_marginBottom="32dp"
-        android:layout_marginStart="16dp"
-        android:text="@string/button_choose_photo"
-        android:textColor="@color/colorFaint"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
 
-    <Button
-        android:id="@+id/btn_take_photo"
-        android:layout_width="160dp"
-        android:layout_height="56dp"
-        android:layout_marginBottom="32dp"
-        android:layout_marginEnd="16dp"
-        android:text="@string/button_take_photo"
-        android:textColor="@color/colorFaint"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
+        <Button
+            android:id="@+id/btn_choose_photo"
+            fontPath="fonts/Montserrat-Light.ttf"
+            android:layout_width="160dp"
+            android:layout_height="56dp"
+            android:layout_marginBottom="32dp"
+            android:layout_marginStart="16dp"
+            android:background="@drawable/button_bg_blue_rounded"
+            android:text="@string/button_choose_photo"
+            android:textColor="@color/colorWhite" />
+
+        <Button
+            android:id="@+id/btn_take_photo"
+            fontPath="fonts/Montserrat-Light.ttf"
+            android:layout_width="160dp"
+            android:layout_height="56dp"
+            android:layout_marginBottom="32dp"
+            android:layout_marginEnd="16dp"
+            android:background="@drawable/button_bg_blue_rounded"
+            android:text="@string/button_take_photo"
+            android:textColor="@color/colorWhite" />
+
+    </LinearLayout>
 
 
 </android.support.constraint.ConstraintLayout>
