--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorButtons">#ff6e40</color>
-    <color name="colorPrimaryDark">#1976D2</color>
-    <color name="colorPrimary">#2196F3</color>
-    <color name="colorFaint">#FFFFFF</color>
-    <color name="colorAccent">#FF5722</color>
+    <color name="colorPrimaryDark">#393B47</color>
+    <color name="colorPrimary">#454753</color>
+    <color name="colorWhite">#FFFFFF</color>
+    <color name="colorAccent">#69E3EE</color>
     <color name="primaryText">#212121</color>
     <color name="lightPrimaryColor">#e3f2fd</color>
 
