--- a/app/src/main/res/layout/activity_instructions.xml
+++ b/app/src/main/res/layout/activity_instructions.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,41 +7,39 @@
     android:orientation="vertical">
 
     <TextView
+        style="@style/TextStyle"
         android:layout_width="wrap_content"
         android:layout_height="32dp"
         android:fontFamily="helvetica"
-        android:text="@string/first_step"
-        style="@style/TextStyle" />
+        android:text="@string/first_step" />
 
     <TextView
+        style="@style/TextStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/second_step"
-        style="@style/TextStyle"/>
+        android:text="@string/second_step" />
 
     <TextView
+        style="@style/TextStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/third_step"
-        style="@style/TextStyle"/>
+        android:text="@string/third_step" />
 
     <TextView
+        style="@style/TextStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/forth_step"
-        style="@style/TextStyle"/>
+        android:text="@string/forth_step" />
 
     <TextView
+        style="@style/TextStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/fifth_step"
-        style="@style/TextStyle"/>
+        android:text="@string/fifth_step" />
 
     <TextView
+        style="@style/TextStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/sixth_step"
-        style="@style/TextStyle"/>
-
-
+        android:text="@string/sixth_step" />
 </LinearLayout>
