--- a/app/src/main/res/layout/fragment_editor.xml
+++ b/app/src/main/res/layout/fragment_editor.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:background="@color/lightPrimaryColor">
+    android:background="@color/lightPrimaryColor"
+    android:orientation="vertical">
 
     <FrameLayout
         android:id="@+id/fl_limiter_container"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_gravity="center_vertical|center_horizontal"
-        android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
+        android:layout_marginEnd="16dp"
         android:layout_weight="1">
 
     </FrameLayout>
@@ -25,46 +25,46 @@
         android:layout_marginTop="8dp"
         android:clipToPadding="false">
 
-        <android.support.design.widget.FloatingActionButton
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/btn_minus"
             android:layout_width="44dp"
             android:layout_height="44dp"
             android:layout_centerVertical="true"
             android:layout_toStartOf="@+id/tv_current_parts"
+            android:scaleType="center"
             android:tint="@android:color/white"
-            app:srcCompat="@drawable/ic_remove"
-            android:scaleType="center"/>
+            app:srcCompat="@drawable/ic_remove" />
 
         <TextView
             android:id="@+id/tv_current_parts"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:layout_marginEnd="24dp"
             android:layout_marginStart="24dp"
-            android:textSize="44sp"
-            tools:text="@string/default_parts_quantity"
+            android:layout_marginEnd="24dp"
             android:elevation="8dp"
-            android:textColor="@color/primaryText" />
+            android:textColor="@color/primaryText"
+            android:textSize="44sp"
+            tools:text="@string/default_parts_quantity" />
 
-        <android.support.design.widget.FloatingActionButton
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/btn_plus"
             android:layout_width="44dp"
             android:layout_height="44dp"
             android:layout_centerVertical="true"
             android:layout_toEndOf="@+id/tv_current_parts"
+            android:scaleType="center"
             android:tint="@android:color/white"
-            app:srcCompat="@drawable/ic_add"
-            android:scaleType="center"/>
+            app:srcCompat="@drawable/ic_add" />
 
     </RelativeLayout>
 
     <!--<Button-->
-        <!--android:id="@+id/btn_done"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_gravity="bottom|center_horizontal"-->
-        <!--android:layout_margin="16dp"-->
-        <!--android:text="@string/btn_done" />-->
+    <!--android:id="@+id/btn_done"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_gravity="bottom|center_horizontal"-->
+    <!--android:layout_margin="16dp"-->
+    <!--android:text="@string/btn_done" />-->
 
 </LinearLayout>
