--- a/app/src/main/res/layout/fragment_enter_page.xml
+++ b/app/src/main/res/layout/fragment_enter_page.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,19 +7,19 @@
     android:background="@color/colorPrimary"
     tools:ignore="MissingPrefix">
 
-
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintTop_toTopOf="parent">
 
         <Button
             android:id="@+id/btn_choose_photo"
             fontPath="fonts/Montserrat-Light.ttf"
             android:layout_width="160dp"
             android:layout_height="56dp"
-            android:layout_marginBottom="32dp"
             android:layout_marginStart="16dp"
+            android:layout_marginBottom="32dp"
             android:background="@drawable/button_bg_blue_rounded"
             android:text="@string/button_choose_photo"
             android:textColor="@color/colorWhite" />
@@ -29,13 +29,12 @@
             fontPath="fonts/Montserrat-Light.ttf"
             android:layout_width="160dp"
             android:layout_height="56dp"
-            android:layout_marginBottom="32dp"
             android:layout_marginEnd="16dp"
+            android:layout_marginBottom="32dp"
             android:background="@drawable/button_bg_blue_rounded"
             android:text="@string/button_take_photo"
             android:textColor="@color/colorWhite" />
 
     </LinearLayout>
 
-
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
