--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.DayNight.DarkActionBar">
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
@@ -10,7 +10,7 @@
     </style>
 
 
-    <style name="TextStyle" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="TextStyle" parent="Theme.AppCompat.DayNight.DarkActionBar">
         <item name="android:textSize">16sp</item>
         <item name="android:fontFamily">helvetica</item>
         <item name="android:textStyle">bold</item>
