--- a/app/src/main/res/layout/fragment_enter_page.xml
+++ b/app/src/main/res/layout/fragment_enter_page.xml
@@ -8,17 +8,18 @@
     tools:ignore="MissingPrefix">
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <Button
             android:id="@+id/btn_choose_photo"
-            fontPath="fonts/Montserrat-Light.ttf"
             android:layout_width="160dp"
             android:layout_height="56dp"
-            android:layout_marginStart="16dp"
             android:layout_marginBottom="32dp"
             android:background="@drawable/button_bg_blue_rounded"
             android:text="@string/button_choose_photo"
@@ -26,14 +27,10 @@
 
         <Button
             android:id="@+id/btn_take_photo"
-            fontPath="fonts/Montserrat-Light.ttf"
             android:layout_width="160dp"
             android:layout_height="56dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginBottom="32dp"
             android:background="@drawable/button_bg_blue_rounded"
             android:text="@string/button_take_photo"
             android:textColor="@color/colorWhite" />
-
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
