--- a/app/src/main/res/xml/file_paths.xml
+++ b/app/src/main/res/xml/file_paths.xml
@@ -1,4 +1,8 @@
 <paths xmlns:android="http://schemas.android.com/apk/res/android">
-    <external-cache-path name="my_cache" path="." />
-    <external-path name="my_images" path="Android/data/com.tzkt.andrey.instapano/files/Pictures" />
+    <external-cache-path
+        name="my_cache"
+        path="." />
+    <external-path
+        name="my_images"
+        path="Android/data/com.tzkt.andrey.instapano/files/Pictures" />
 </paths>
